Converted class on tabs to tabContent (so alignment correct before click). Increased padding (text below tab on Firefox).

--- a/web-console/web-app/css/console/tab-container.css
+++ b/web-console/web-app/css/console/tab-container.css
@@ -31,7 +31,7 @@ ul#tabs li a.selected {
 }
 
 div.tabContent {
-	padding: 0.5em;
+	padding: 2em 1em;
 	background-color:#ffffff
 }
 
